# rpg-world-engine

./: .env.template  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
data/world_models/Chicago-1920s-detective_noir/: README.md  city__neighborhood_model.json  city_model.json  city_neighborhood_model-no-nl.json  npc-response.json  places_response.json  player_response.json  scenario-Jordan_Johnson-detective_noir.json  world_model-Chicago-detective_noir.json
data/world_specifications/Chicago-1920s-detective_noir/: README.md  city_prompt.json  neighborhoods_prompt.json  neighborhoods_prompt_expanded.json  npc-prompt.txt  places_prompt.json  places_prompt_expanded.json  player_prompt.txt  story_prompt.json
docs/: workflow_diagram.md
notebooks/: gemini-api.ipynb  gemini-genai-api.ipynb  gemini-generativeai-api.ipynb
src/rpg_world_engine/: __init__.py  game.py  game_configuration.py  game_master.py  inventory.py  llm_client.py  policy.py  rpg_constants.py  rpg_logging.py  world_builder.py  world_model.py
src/world_builder/: __init__.py
tests/: constants.py  test_game.py  test_policy.py  test_world_builder.py  test_world_model.py
tests/test_data/: initial_world_model.json  story_prompt.json
